--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     :root {
-        --background-url: url('https://i.imgur.com/o4HcwfU.png');
+        --background-url: url('https://i.imgur.com/SAowSkp.png');
     }
 
     body {
@@ -77,3 +77,4 @@
     </div>
 </body>
 </html>
+
