Modify message content in index.html
Updated the message in the paragraph to reflect a more casual tone.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <h1>𝙰𝚂𝟷 𝚃𝚎𝚊𝚖𝚜</h1>
-        <p>Message red.concrete on Discord to get your team's Discord Server added here. ANY TEAM BTW EVEN MY OPPS</p>
+        <p>Message red.concrete on Discord to get your team's Discord Server added here. ANY TEAM BTW I DON'T CARE</p>
         <div class="links">
             <a href="https://discord.gg/FYuRtN26Ha" target="_blank">Ashborn</a>
             <a href="https://discord.gg/hKWzzt4CAS" target="_blank">GHAST</a>
@@ -77,4 +77,5 @@
     </div>
 </body>
 </html>
+
 
