--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         <div class="links">
             <a href="https://discord.gg/FYuRtN26Ha" target="_blank">Ashborn</a>
             <a href="https://discord.gg/hKWzzt4CAS" target="_blank">GHAST</a>
+            <a href="https://discord.gg/zrutz78fF5" target="_blank">Scorched Apple Mafia</a>
         </div>
     </div>
 </body>
 </html>
+
